Linked list file updated

--- a/DSA/Linked_list.ipynb
+++ b/DSA/Linked_list.ipynb
@@ -790,10 +790,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 455,
    "id": "e14ac619-23bf-4cd4-a50b-24107d4d242c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traversing Circular Linked List:\n",
+      "1 -> 2 -> 3 -> "
+     ]
+    }
+   ],
    "source": [
     "#Circular ll\n",
     "\n",
@@ -849,6 +858,14 @@
     "print(\"Traversing Circular Linked List:\")\n",
     "circular_list.traverse()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26fa24c2-623d-42bf-b475-acb92498835f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
