Sorting file updated

--- a/DSA/Linked_list.ipynb
+++ b/DSA/Linked_list.ipynb
@@ -866,6 +866,86 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 456,
+   "id": "05462691-a977-44f4-a69c-0a75c9dc07e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 10 20 30 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code of insert node at begin in \n",
+    "# doubly Circular linked list.\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, x):\n",
+    "        self.data = x\n",
+    "        self.next = None\n",
+    "        self.prev = None\n",
+    "\n",
+    "def insertAtBeginning(head, newData):\n",
+    "    newNode = Node(newData)\n",
+    "    \n",
+    "    if head is None:\n",
+    "      \n",
+    "        # List is empty\n",
+    "        newNode.next = newNode.prev = newNode\n",
+    "        head = newNode\n",
+    "    else:\n",
+    "      \n",
+    "        # List is not empty\n",
+    "        last = head.prev \n",
+    "\n",
+    "        # Insert new node\n",
+    "        newNode.next = head\n",
+    "        newNode.prev = last\n",
+    "        head.prev = newNode\n",
+    "        last.next = newNode\n",
+    "        \n",
+    "        # Update head\n",
+    "        head = newNode\n",
+    "    \n",
+    "    return head\n",
+    "\n",
+    "def printList(head):\n",
+    "    if not head:\n",
+    "        return\n",
+    "    curr = head\n",
+    "    while True:\n",
+    "        print(curr.data, end=\" \")\n",
+    "        curr = curr.next\n",
+    "        if curr == head:\n",
+    "            break\n",
+    "    print()\n",
+    "\n",
+    "# Linked List : 10<->20<->30\n",
+    "head = Node(10)\n",
+    "head.next = Node(20)\n",
+    "head.next.prev = head\n",
+    "head.next.next = Node(30)\n",
+    "head.next.next.prev = head.next\n",
+    "head.next.next.next = head\n",
+    "head.prev = head.next.next\n",
+    "\n",
+    "head = insertAtBeginning(head, 5)\n",
+    "printList(head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c16625cf-af19-44bb-b4c0-9c7d70e42647",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
