recursion file updated

--- a/DSA/Recursion.ipynb
+++ b/DSA/Recursion.ipynb
@@ -111,8 +111,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "3df00379-afe5-4611-942d-bbefb8c34d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n",
+      "[2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# printing all subsequenses whose sum is K\n",
+    "\n",
+    "def sub_seq_sum(i, empty,summ,k, n, lst):\n",
+    "\n",
+    "    if i == n:\n",
+    "        if summ == k:\n",
+    "            print(empty)\n",
+    "        return\n",
+    "    empty.append(lst[i])\n",
+    "    summ = summ + lst[i]\n",
+    "    sub_seq_sum(i+1,empty,summ,k,n, lst)\n",
+    "    # empty.remove[lst[i]]\n",
+    "    empty.pop()\n",
+    "    summ = summ - lst[i]\n",
+    "    sub_seq_sum(i+1,empty,summ,k,n, lst)\n",
+    "    \n",
+    "sub_seq_sum(0,[], 0 , 3, 4, [3,6,2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "2f7934c6-bd99-4bb8-a09e-e794d22f034c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# printing only one subsequenses whose sum is K\n",
+    "\n",
+    "def sub_seq_sum(i, empty,summ,k, n, lst):\n",
+    "\n",
+    "    if i == n:\n",
+    "        if summ == k:\n",
+    "            print(empty)\n",
+    "            return True\n",
+    "        return\n",
+    "    empty.append(lst[i])\n",
+    "    summ = summ + lst[i]\n",
+    "    if sub_seq_sum(i+1,empty,summ,k,n, lst) == True:\n",
+    "        return True\n",
+    "    # empty.remove[lst[i]]\n",
+    "    empty.pop()\n",
+    "    summ = summ - lst[i]\n",
+    "    if sub_seq_sum(i+1,empty,summ,k,n, lst) == True:\n",
+    "        return True\n",
+    "    return False\n",
+    "    \n",
+    "sub_seq_sum(0,[], 0 , 3, 4, [3,6,2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5d1335fe-0580-475e-a969-4b18b26ee84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# printing count subsequenses whose sum is K\n",
+    "\n",
+    "def sub_seq_sum(i,summ,k, n, lst):\n",
+    "    \n",
+    "    if i == n:\n",
+    "        if summ == k:\n",
+    "            return 1\n",
+    "            \n",
+    "        else:\n",
+    "            return 0\n",
+    "    \n",
+    "    summ = summ + lst[i]\n",
+    "    r = sub_seq_sum(i+1,summ,k,n, lst)\n",
+    "    # empty.remove[lst[i]]\n",
+    "  \n",
+    "    summ = summ - lst[i]\n",
+    "    l = sub_seq_sum(i+1,summ,k,n, lst)\n",
+    "    return r + l\n",
+    "    \n",
+    "sub_seq_sum(0, 0 , 3, 4, [3,6,2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daacae49-e965-4599-9370-b67b40cfbd45",
    "metadata": {},
    "outputs": [],
    "source": []
