recursion file updated

--- a/DSA/Recursion.ipynb
+++ b/DSA/Recursion.ipynb
@@ -234,11 +234,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "daacae49-e965-4599-9370-b67b40cfbd45",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[2, 3, 4, 5]\n",
+      "[3, 4, 5]\n",
+      "[4, 5]\n",
+      "[5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_pat(i , n):\n",
+    "    if i > n:\n",
+    "        return\n",
+    "    a = [i for i in range(i , n+1)]\n",
+    "    print(a)\n",
+    "    print_pat(i+1, n)\n",
+    "\n",
+    "print_pat(0,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "dfae2c11-bb68-4fa9-b995-451978bf6e26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5]\n",
+      "[4, 5]\n",
+      "[3, 4, 5]\n",
+      "[2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[0, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_pat(i , n):\n",
+    "    if i > n:\n",
+    "        return\n",
+    "    print_pat(i+1, n)\n",
+    "    a = [i for i in range(i , n+1)]\n",
+    "    print(a)\n",
+    "   \n",
+    "\n",
+    "print_pat(0,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fca46162-85f4-4878-a123-624f0c3d42fb",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Printing N numbers with using recusion\n",
+    "li= []\n",
+    "\n",
+    "def printNos(x):\n",
+    "  if x==0:\n",
+    "    return\n",
+    "  else:\n",
+    "\n",
+    "    li.insert(0,x)\n",
+    "    print(li)\n",
+    "    x = x - 1\n",
+    "    printNos(x)\n",
+    "  return li\n",
+    "\n",
+    "print(printNos(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d62b25d-f9a8-475e-a3f2-d0be995ec592",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# printing natural numbers\n",
+    "\n",
+    "li = []\n",
+    "def printnum(x):\n",
+    "    if x==0:\n",
+    "        return\n",
+    "    else:\n",
+    "        li.insert(0,x)\n",
+    "        printnum(x-1)\n",
+    "    return li\n",
+    "print(printnum(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6d57efc-2a60-4de9-ae2c-2d2b703603d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#backtracking\n",
+    "li =[]\n",
+    "def backtrack(x):\n",
+    "  if x<1:\n",
+    "    return\n",
+    "  else:\n",
+    "    backtrack(x-1)\n",
+    "    li.insert(0,x)\n",
+    "    print(x)\n",
+    "  return li\n",
+    "print(backtrack(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3bd0959-5ff5-4702-a383-678f9ac5ba21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#printing name without using loop\n",
+    "li = []\n",
+    "def printNtimes(n):\n",
+    "    if n == 0:\n",
+    "        return\n",
+    "    else:\n",
+    "        li.append(\"Coding Ninjas\")\n",
+    "        printNtimes(n-1)\n",
+    "    return li\n",
+    "\n",
+    "print(printNtimes(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac534cfa-962b-4d63-b704-a93f5779569c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#summation of first n numbers\n",
+    "#functional way\n",
+    "\n",
+    "def summation(n):\n",
+    "  if n==0:\n",
+    "    return 0\n",
+    "  return n + summation(n-1)\n",
+    "\n",
+    "print(summation(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "717864e5-2492-425d-9249-3e2345ae0167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#factorial of first n numbers\n",
+    "#functional way\n",
+    "\n",
+    "def fact(n):\n",
+    "  if n==1:\n",
+    "    return 1\n",
+    "  return n * fact(n-1)\n",
+    "\n",
+    "print(fact(3))\n",
+    "     "
+   ]
   }
  ],
  "metadata": {
