--- a/DSA/Sorting_techniques.ipynb
+++ b/DSA/Sorting_techniques.ipynb
@@ -99,21 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "c952c6f6-ef7f-4c77-877c-04933e8237aa",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[31], line 35\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(l, h\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     33\u001b[0m         lst[i] \u001b[38;5;241m=\u001b[39m temp[i\u001b[38;5;241m-\u001b[39ml]\n\u001b[1;32m---> 35\u001b[0m \u001b[38;5;28mprint\u001b[39m(merge_sort([\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m6\u001b[39m], \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m4\u001b[39m))\n",
-      "Cell \u001b[1;32mIn[31], line 9\u001b[0m, in \u001b[0;36mmerge_sort\u001b[1;34m(lst, l, h)\u001b[0m\n\u001b[0;32m      7\u001b[0m merge_sort(lst, l , mid)\n\u001b[0;32m      8\u001b[0m merge_sort(lst, mid\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m , h)\n\u001b[1;32m----> 9\u001b[0m merge(lst, l , mid, h)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m lst\n",
-      "Cell \u001b[1;32mIn[31], line 33\u001b[0m, in \u001b[0;36mmerge\u001b[1;34m(lst, l, mid, h)\u001b[0m\n\u001b[0;32m     30\u001b[0m     b \u001b[38;5;241m=\u001b[39m b\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(l, h\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m---> 33\u001b[0m     lst[i] \u001b[38;5;241m=\u001b[39m temp[i\u001b[38;5;241m-\u001b[39ml]\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 5, 6, 45]\n"
      ]
     }
    ],
@@ -145,7 +139,7 @@
     "        temp.append(lst[a])\n",
     "        a = a+1\n",
     "\n",
-    "    while b<=mid:\n",
+    "    while b<=h:\n",
     "        temp.append(lst[b])\n",
     "        b = b+1\n",
     "\n",
@@ -207,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "id": "b7c2e91a-c1c7-4f1a-bfd3-fc1491c9f0ca",
    "metadata": {},
    "outputs": [
@@ -235,7 +229,7 @@
     "    l = left\n",
     "    h = high\n",
     "    while l < h:\n",
-    "        while pivot >= lst[l] and left <= h:\n",
+    "        while pivot >= lst[l] and left <= h-1:\n",
     "            l+= 1\n",
     "        while pivot < lst[h] and high >= l:\n",
     "            h-= 1\n",
@@ -257,6 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "\n"
    ]
   }
