recusion file updated

--- a/DSA/Recursion.ipynb
+++ b/DSA/Recursion.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "07c22cec-b2bb-4952-880d-41cbf82c30a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 4, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Reverse a string\n",
     "\n",
@@ -22,10 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f1e9d100-7198-42ae-a19c-e2e75c17ea44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " madam\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# pallindrom\n",
     "\n",
@@ -42,10 +65,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "de2936ac-721e-4bcc-9985-ca005c98df5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 2, 1]\n",
+      "[3, 6, 2]\n",
+      "[3, 6, 1]\n",
+      "[3, 6]\n",
+      "[3, 2, 1]\n",
+      "[3, 2]\n",
+      "[3, 1]\n",
+      "[3]\n",
+      "[6, 2, 1]\n",
+      "[6, 2]\n",
+      "[6, 1]\n",
+      "[6]\n",
+      "[2, 1]\n",
+      "[2]\n",
+      "[1]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# printing all subsequenses\n",
     "\n",
@@ -65,10 +111,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3df00379-afe5-4611-942d-bbefb8c34d7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n",
+      "[2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# printing all subsequenses whose sum is K\n",
     "\n",
@@ -91,10 +146,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2f7934c6-bd99-4bb8-a09e-e794d22f034c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# printing only one subsequenses whose sum is K\n",
     "\n",
@@ -121,10 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5d1335fe-0580-475e-a969-4b18b26ee84f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# printing count subsequenses whose sum is K\n",
     "\n",
@@ -150,10 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "daacae49-e965-4599-9370-b67b40cfbd45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[2, 3, 4, 5]\n",
+      "[3, 4, 5]\n",
+      "[4, 5]\n",
+      "[5]\n"
+     ]
+    }
+   ],
    "source": [
     "def print_pat(i , n):\n",
     "    if i > n:\n",
@@ -167,10 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dfae2c11-bb68-4fa9-b995-451978bf6e26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5]\n",
+      "[4, 5]\n",
+      "[3, 4, 5]\n",
+      "[2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[0, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "def print_pat(i , n):\n",
     "    if i > n:\n",
@@ -185,10 +295,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fca46162-85f4-4878-a123-624f0c3d42fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5]\n",
+      "[4, 5]\n",
+      "[3, 4, 5]\n",
+      "[2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "#Printing N numbers with using recusion\n",
     "li= []\n",
@@ -209,10 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3d62b25d-f9a8-475e-a3f2-d0be995ec592",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# printing natural numbers\n",
     "\n",
@@ -229,10 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b6d57efc-2a60-4de9-ae2c-2d2b703603d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "#backtracking\n",
     "li =[]\n",
@@ -249,10 +393,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b3bd0959-5ff5-4702-a383-678f9ac5ba21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Coding Ninjas', 'Coding Ninjas', 'Coding Ninjas', 'Coding Ninjas']\n"
+     ]
+    }
+   ],
    "source": [
     "#printing name without using loop\n",
     "li = []\n",
@@ -269,10 +421,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ac534cfa-962b-4d63-b704-a93f5779569c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#summation of first n numbers\n",
@@ -288,10 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "717864e5-2492-425d-9249-3e2345ae0167",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "#factorial of first n numbers\n",
     "#functional way\n",
@@ -304,6 +472,215 @@
     "print(fact(3))\n",
     "     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "14f77db5-0069-4a2e-b1fd-0ac373f5339e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#subset sum\n",
+    "\n",
+    "#O(2^n)\n",
+    "\n",
+    "def subset_sum(summa, ind , lst, n, empty):\n",
+    "    if ind == n:\n",
+    "        empty.append(summa)\n",
+    "        return\n",
+    "    summa = summa + lst[ind]\n",
+    "    subset_sum(summa, ind+1 , lst, n, empty)\n",
+    "    summa = summa - lst[ind]\n",
+    "    subset_sum(summa, ind+1 , lst, n, empty)\n",
+    "    return sorted(empty)\n",
+    "    \n",
+    "    \n",
+    "print(subset_sum(0, 0 , [3,1,2], 3, []))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "195830f6-e1b0-416a-a951-7c106a90209e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3]]\n",
+      "[[1, 2, 3], [1, 3, 2]]\n",
+      "[[1, 2, 3], [1, 3, 2], [2, 1, 3]]\n",
+      "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1]]\n",
+      "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2]]\n",
+      "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]\n",
+      "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# permutations\n",
+    "\n",
+    "#O(n! * n)\n",
+    "#O(n)\n",
+    "\n",
+    "def permutations(lst, empty, dic , ans):\n",
+    "    if len(lst) == len(empty):\n",
+    "        # print(empty)\n",
+    "        ans.append(empty[:])\n",
+    "        print(ans)\n",
+    "        return\n",
+    "\n",
+    "    for i in range(len(lst)):\n",
+    "        if i not in dic:\n",
+    "            dic[i] = 1\n",
+    "            empty.append(lst[i])\n",
+    "            permutations(lst, empty, dic , ans)\n",
+    "            empty.pop()\n",
+    "            del dic[i]    \n",
+    "    return ans\n",
+    "\n",
+    "print(permutations([1,2,3],[],{},[]))\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c33b5130-4f9a-48a6-8d8c-c1818b9aed5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {1:[2],2:4}\n",
+    "if 3 not in d:\n",
+    "    print(\"yes\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"no\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a2a79f18-9b7c-45fe-a129-8a58fe7aeeb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic = {}\n",
+    "dic[0] = 0\n",
+    "dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9887f35a-232b-490d-ad78-87bc98c98d40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del dic[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c487181e-ee7b-4081-9187-1fac0913c199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f96170bb-ad4e-4f67-9880-5ba61e1353cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, [], 5, 6]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [2,3,4,\n",
+    "     [],5,6]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7b43efb4-770a-4136-abb4-c359deff84ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, [], 5, 6]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97d912aa-25ad-4ce2-a82c-8a7943660124",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
